<resources>
    <string name="app_name">COMforTABLE</string>
    <string name="title">Co-Reserve</string>
    <string name="title_tit">タイトル</string>
    <string name="title_btn">ログイン</string>
    <string name="sys_name">ZOOM部屋\nオンライン予約システム</string>
    <string name="login">ログイン</string>
    <string name="login_tit">ログイン画面</string>
    <string name="login_sub_tv">ログインフォーム</string>
    <string name="login_num_tv">学籍番号：</string>
    <string name="login_pass_tv">パスワード：</string>
    <string name="login_btn">ログイン</string>
    <string name="login_error_t">ID、またはパスワードが違います。</string>
    <string name="login_error_all_t">ID,パスワードを入力してください(半角英数字)</string>
    <string name="home_tit">ホーム</string>
    <string name="other_log">他端末からのログインがありました。</string>
    <string name="error_firebase">通信に失敗しました。</string>
    <string name="no_reserve">予約がありません</string>
    <string name="lo_tit">確認</string>
    <string name="logout">ログアウトします。\nよろしいですか？</string>
    <string name="query_tit">お問い合わせ</string>
    <string name="query_sub">件名：</string>
    <string name="query_body">お問い合わせ内容：</string>
    <string name="query_btn">確認</string>
    <string name="query_sub_tit">送信確認</string>
    <string name="query_con_sub">件名：</string>
    <string name="query_con_body">本文：</string>
    <string name="query_con_mes">上記の内容で送信します。\nよろしいですか？</string>
    <string name="query_send">送信</string>
    <string name="query_send_tit">送信完了</string>
    <string name="query_send_t">メールを送信しました。</string>
    <string name="cancel">キャンセル</string>
    <string name="query_error_tit">入力項目エラー</string>
    <string name="query_error_mes">未入力の項目があります。</string>
    <string name="attention">
        ・このアプリは、４号館にあるオンライン会議などで利用できる個室を予約するためのものです。\n
        ・部屋は予約開始時間から利用可能になるため、時間に余裕をもって予約するようにしてください。\n
        ・一度の利用で予約できる時間は最大で５時間までです。それ以上の時間を予約することはできないのでご注意ください。\n
        ・なにか問題が起こりましたら、進路指導課(TEL:06-6376-4733)までご連絡ください。
    </string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="att_tit">注意事項</string>
    <string name="home">さん</string>
    <string name="number">学籍番号：</string>
    <string name="reserved">次回予約</string>
    <string name="date_temp">データを取得中…</string>
    <string name="home_entered">入室中</string>
    <string name="home_admin">管理者モードです</string>
    <string name="home_reserve">予約</string>
    <string name="home_list">一覧</string>
    <string name="home_entry">入室</string>
    <string name="home_lock">ロック</string>
    <string name="er_tit">予約数オーバー</string>
    <string name="error_reserve">
        予約数が３件に到達しています。\n
        これ以上は予約できません。
    </string>
    <string name="error_adm_reserve">
        管理者モード中は予約できません。
    </string>
    <string name="error">エラー</string>
    <string name="error_enter">既に入室中です。</string>
    <string name="error_adm_enter">管理者モード中は入室機能を使えません。</string>
    <string name="error_lock1">
        部屋に入室していません。\n
        ロックボタンは、入室の処理が完了すると使用可能になります。
    </string>
    <string name="error_lock2">部屋の利用時間外です。</string>
    <string name="reserve_tit">日付選択</string>
    <string name="reserve_1">日付を選んでください</string>
    <string name="reserve_error_sun">この日は日曜日なので選択できません</string>
    <string name="rot_tit">時間選択</string>
    <string name="rot_sub_tv">時間を選択してください</string>
    <string name="rot_date_tv">日付を変更する</string>
    <string name="colon">：</string>
    <string name="wave">～</string>
    <string name="rot_noReserve">予約はありません。</string>
    <string name="rot_error">予約時間エラー</string>
    <string name="rot_error_mes">登録しようとしている時間は異常なため、予約できません。</string>
    <string name="rot_btn">確認</string>
    <string name="rcf_tit">最終確認</string>
    <string name="rcf_tit_e">予約情報エラー</string>
    <string name="rcf_tit_u">更新確認</string>
    <string name="rcf_def">
        RoomXに〇〇月〇〇日△△時◇◇分で予約します。\n
        よろしいですか？
    </string>
    <string name="rcf_roomError">部屋番号が異常です。</string>
    <string name="rcf_resError">
        予約件数がいっぱいです。\n
        既に予約している分が完了してから再度お試しください。
    </string>
    <string name="rcf_btn">確認</string>
    <string name="rco_tit_s">予約完了</string>
    <string name="rco_tit_u">更新完了</string>
    <string name="rco_ok">
        予約が完了しました。\n
        予約した部屋は、開始時間が過ぎてから利用できます。
    </string>
    <string name="update_ok">
        予約を更新しました。\n
        予約した部屋は、開始時間が過ぎてから利用できます。
    </string>
    <string name="rco_tit_e">予約失敗</string>
    <string name="rco_ng">
        予約時間が重複していたため予約できませんでした。\n
        申し訳ありません。
    </string>
    <string name="list_tit">予約一覧</string>
    <string name="list_def">ここに日時と部屋番号が表示されるよ</string>
    <string name="update">更新</string>
    <string name="list_del">取消</string>
    <string name="la_cancel">予約取消</string>
    <string name="la_cancel_mes">予約を取り消しました</string>
    <string name="reader_tit">ＱＲコード読み取り</string>
    <string name="attention_wait">しばらくお待ちください…</string>
    <string name="attention_ok">
        ・扉は終了時間の５分後に自動でロックされますが、退室時には利用した方が施錠するようにしてください。\n
        ・利用後は必ずチェックシートを全て埋め、退出処理を済ませてから退出してください。\n
        ・何か不都合がありましたら、進路指導課までご連絡ください。
    </string>
    <string name="enter_te">部屋番号エラー</string>
    <string name="attention_error">
        予約時間か部屋が違います。\n
        予約一覧から予約情報を再確認してください。
    </string>
    <string name="next">次へ</string>
    <string name="back">戻る</string>
    <string name="release_tit">ロック解除</string>
    <string name="ok">OK</string>
    <string name="lock_tit">ロック画面</string>
    <string name="lock_btn_u">ロック解除</string>
    <string name="lock_btn_l">ロック</string>
    <string name="lock_btn_q">退出の準備をする</string>
    <string name="lock_locked">扉をロックしました。</string>
    <string name="lock_unlocked">ロックを解除しました。</string>
    <string name="error_adm_lock">管理者モード中は退出処理はできません。</string>
    <string name="check_tit">チェックシート</string>
    <string name="check1">　室内の電源を全てOFFにしましたか？</string>
    <string name="check2">　扉のロックを掛けましたか？</string>
    <string name="check3">　外の張り紙を外しましたか？</string>
    <string name="check4">　PC、マウス等は除菌しましたか？</string>
    <string name="check_back">ボタンに戻る</string>
    <string name="quit_tit">退出完了</string>
    <string name="quit">
        退出が完了しました。\n
        部屋を綺麗にご利用いただき、\n
        ありがとうございます。</string>
    <string name="complete">完了</string>

    <string name="time_reserve_s">開始予定時刻：</string>
    <string name="time_reserve_e">終了予定時刻：</string>
    <string-array name="time_list_h">
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="time_list_m">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="room_num">
        <item>room 1</item>
        <item>room 2</item>
        <item>room 3</item>
        <item>room 4</item>
        <item>room 5</item>
    </string-array>
</resources>